<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/story_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp" >

            <ImageView
                android:id="@+id/ivProfilePost"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/user_dummy"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_item_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_user_username"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/default_img"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no" />
        
        <TextView
            android:id="@+id/tvUserCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption_post"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/tvTimePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/item_user_time"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
